--- a/arch/arm64/configs/k6000_plus_defconfig
+++ b/arch/arm64/configs/k6000_plus_defconfig
@@ -1233,7 +1233,7 @@ CONFIG_MTK_CAM_MAX_NUMBER_OF_CAMERA=2
 # CONFIG_MTK_EFUSE_DOWNGRADE is not set
 CONFIG_MTK_JPEG=y
 CONFIG_MTK_LCM=y
-CONFIG_CUSTOM_KERNEL_LCM="hct_nt35532_dsi_vdo_fhd_panda_55_hz hct_ili9885a_dsi_vdo_fhd_auo_55_hz hct_nt35532_dsi_vdo_fhd_auo_55_rx hct_nt35532_dsi_vdo_fhd_auo_55_hz"
+CONFIG_CUSTOM_KERNEL_LCM="hct_r69339_dsi_vdo_hd_sharp_55_ln hct_nt35532_dsi_vdo_fhd_panda_55_hz hct_ili9885a_dsi_vdo_fhd_auo_55_hz hct_nt35532_dsi_vdo_fhd_auo_55_rx hct_nt35532_dsi_vdo_fhd_auo_55_hz"
 # CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT is not set
 CONFIG_MTK_LENS=y
 # CONFIG_MTK_LENS_USE_MODULE is not set
@@ -1277,9 +1277,9 @@ CONFIG_MTK_VIDEOCODEC_DRIVER=y
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
 CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY=y
-CONFIG_MTK_LCM_PHYSICAL_ROTATION="180"
-CONFIG_LCM_HEIGHT="1920"
-CONFIG_LCM_WIDTH="1080"
+CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
+CONFIG_LCM_HEIGHT="1280"
+CONFIG_LCM_WIDTH="720"
 CONFIG_CUSTOM_LCM_X="0"
 CONFIG_CUSTOM_LCM_Y="0"
 CONFIG_MTK_FB_SUPPORT_ASSERTION_LAYER=y
@@ -1936,10 +1936,10 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 CONFIG_TOUCHSCREEN_MTK=y
-# CONFIG_TOUCHSCREEN_MTK_GT1151 is not set
+CONFIG_TOUCHSCREEN_MTK_GT1151=y
 CONFIG_GT1151_FIRMWARE=""
-CONFIG_GT1151_CONFIG=""
-# CONFIG_GTP_DRIVER_SEND_CFG is not set
+CONFIG_GT1151_CONFIG="config1"
+CONFIG_GTP_DRIVER_SEND_CFG=y
 # CONFIG_GTP_CUSTOM_CFG is not set
 # CONFIG_GTP_CHANGE_X2Y is not set
 # CONFIG_GTP_WARP_X_ON is not set
@@ -1951,14 +1951,14 @@ CONFIG_GTP_HOTKNOT=y
 # CONFIG_GTP_PROXIMITY is not set
 # CONFIG_GTP_WITH_STYLUS is not set
 # CONFIG_GTP_HAVE_STYLUS_KEY is not set
-# CONFIG_GTP_AUTO_UPDATE is not set
-# CONFIG_GTP_HEADER_FW_UPDATE is not set
-# CONFIG_GTP_CREATE_WR_NODE is not set
+#CONFIG_GTP_AUTO_UPDATE=y
+#CONFIG_GTP_HEADER_FW_UPDATE=y
+#CONFIG_GTP_CREATE_WR_NODE is=y
 # CONFIG_GTP_ESD_PROTECT is not set
 # CONFIG_GTP_CHARGER_SWITCH is not set
 # CONFIG_GTP_DEBUG_ARRAY_ON is not set
 # CONFIG_GTP_DEBUG_FUNC_ON is not set
-# CONFIG_GTP_POWER_CTRL_SLEEP is not set
+CONFIG_GTP_POWER_CTRL_SLEEP=y
 # CONFIG_TOUCHSCREEN_MTK_GT928 is not set
 # CONFIG_TOUCHSCREEN_MTK_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT910 is not set
@@ -1969,7 +1969,7 @@ CONFIG_GTP_HOTKNOT=y
 # CONFIG_TOUCHSCREEN_MTK_FOCALTECH is not set
 # CONFIG_TOUCHSCREEN_UNIFIED_DRIVER_4 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_V26 is not set
-CONFIG_TOUCHSCREEN_MTK_GT1X_V14=y
+# CONFIG_TOUCHSCREEN_MTK_GT1X_V14 is not set
 # CONFIG_TOUCHSCREEN_MTK_GSL968 is not set
 # CONFIG_TOUCHSCREEN_MTK_MSG28XX is not set
 # CONFIG_TOUCHSCREEN_MTK_MSG2238 is not set
